# agora-code-kiro

./: CLAUDE.md  KIRO.md  README.md  pyproject.toml
.claude/: hooks.json  settings.json  settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.claude/hooks/: on-prompt.sh  on-subagent.sh  on-tool-failure.sh  pre-agent.sh  pre-read.sh
.clinerules/hooks/: PostToolUse  PreCompact  TaskCancel  TaskComplete  TaskResume  TaskStart  UserPromptSubmit
.cursor/: hooks.json
.cursor/hooks/: post-tool.sh  pre-read.sh  session-end.sh  session-start.sh
.gemini/: settings.json
.gemini/hooks/: post-tool.sh  pre-read.sh
.kiro/hooks/: agora-a-summarize-interaction.kiro.hook  agora-z-checkpoint.kiro.hook
.kiro/steering/: agora-memory.md
agora_code/: __init__.py  agent.py  cli.py  compress.py  embeddings.py  memory_server.py  scanner.py  session.py  summarizer.py  tldr.py  vector_store.py
agora_code/extractors/: llm.py
docs/: KIRO_AGORA_INSIGHTS_AND_PLAN.md  KIRO_CODEBASE_AUDIT_AND_GAPS.md  KIRO_HOOKS.md  KIRO_PLATFORM_AND_AGORA_PLAN.md  KIRO_USER_PATH_AND_CONTEXT.md  REFACTOR_REWIRE_PLAN.md
docs/planning/: AGORA_CODE_KIRO.md  KIRO_CHAT_DOCS_INPUT.md  KIRO_EDITOR_DOCS_INPUT.md  KIRO_GUIDES_LANGUAGE_SUPPORT_INPUT.md  KIRO_HOOKS_OFFICIAL_INPUT.md  KIRO_MCP_OFFICIAL_INPUT.md  KIRO_POWERS_DOCS_INPUT.md  KIRO_SKILLS_OFFICIAL_INPUT.md  KIRO_SPECS_DOCS_INPUT.md  KIRO_STEERING_OFFICIAL_INPUT.md  README.md
hooks/: bootstrap.sh  hooks.json
skills/agora-code/: SKILL.md
